// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCodeBlock dynamic content updates DOM when input changes 1`] = `
"<div>
  <div class=\\"ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-javascript\\">
    <pre class=\\"ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap\\" tabindex=\\"-1\\">
      <code class=\\"ouiCodeBlock__code javascript\\">const value = 'State 1'</code>
    </pre>
  </div>
</div>"
`;

exports[`OuiCodeBlock dynamic content updates DOM when input changes 2`] = `
"<div>
  <div class=\\"ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-javascript\\">
    <pre class=\\"ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap\\" tabindex=\\"-1\\">
      <code class=\\"ouiCodeBlock__code javascript\\">const value = 'State 2'</code>
    </pre>
  </div>
</div>"
`;

exports[`OuiCodeBlock props fontSize l is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontLarge ouiCodeBlock--paddingLarge prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props fontSize m is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontMedium ouiCodeBlock--paddingLarge prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props fontSize s is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props isCopyable is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--hasControls prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
    <div
      class="ouiCodeBlock__controls"
    >
      <div
        class="ouiCodeBlock__copyButton"
      >
        <span
          class="ouiToolTipAnchor"
        >
          <button
            aria-label="Copy"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="copy"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OuiCodeBlock props language is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-html"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code html"
      >
        <span
          class="ouiCodeBlock__line"
        >
          var some = 'code';

        </span>
        <span
          class="ouiCodeBlock__line"
        >
          console.log(some);
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props overflowHeight is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--hasControls prismjs language-none"
    style="max-height: 200px;"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      style="max-height: 200px;"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
    <div
      class="ouiCodeBlock__controls"
    >
      <button
        aria-label="Expand"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--empty ouiButtonIcon--xSmall ouiCodeBlock__fullScreenButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="fullScreen"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`OuiCodeBlock props paddingSize l is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props paddingSize m is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingMedium prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props paddingSize none is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props paddingSize s is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingSmall prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock props transparentBackground is rendered 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--transparentBackground prismjs language-none"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        class="ouiCodeBlock__code"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;

exports[`OuiCodeBlock renders a code block 1`] = `
<div>
  <div
    class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-none testClass1 testClass2"
  >
    <pre
      class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
      tabindex="-1"
    >
      <code
        aria-label="aria-label"
        class="ouiCodeBlock__code"
        data-test-subj="test subject string"
      >
        var some = 'code';
console.log(some);
      </code>
    </pre>
  </div>
</div>
`;
